[package]
name = "feos-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0"
quantity = "0.6"
feos-core = { git = "https://github.com/feos-org/feos", branch = "refactor_ideal_gas_v2" }
feos = { git = "https://github.com/feos-org/feos", branch = "refactor_ideal_gas_v2", features = ["pcsaft"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
ndarray = "0.15"
num-dual = "0.7"