[package]
name = "feos-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
thiserror = "1.0"
quantity = "0.7"
feos-core = "0.6"
feos = { version = "0.6", features = ["pcsaft"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
ndarray = "0.15"
num-dual = "0.8"

[build-dependencies]
cbindgen = { version = "0.26", default-features = false }
